# Joseda8-LibGstD-JetsonTests

./: meson.build
app/: meson.build  test1.c  test2_fpsdisplay.c  test2_framerate.c  test3_clientapp.c  test3_clientapp2.c  test4_performance_appsink.c  test4_performance_appsink_callback.c
